RESOLVED FIXED46531
Autocorrection panel is shown at incorrect location when WebView is scrolled.
https://bugs.webkit.org/show_bug.cgi?id=46531
Summary Autocorrection panel is shown at incorrect location when WebView is scrolled.
Jia Pu
Reported 2010-09-24 15:32:24 PDT
<rdar://problem/8455376> When the size of WebView is larger than the containing view (i.e. the scroll bar is shown). The correction panel ends up showing the bubble outside of the window. Because the coordinate used for displaying the panel is in the page's system not the view's.
Attachments
Proposed patch (v1) (3.27 KB, patch)
2010-09-27 12:56 PDT, Jia Pu
mitz: review-
Proposed patch (v2) (2.56 KB, patch)
2010-09-28 10:24 PDT, Jia Pu
no flags
Jia Pu
Comment 1 2010-09-27 12:56:31 PDT
Created attachment 68945 [details] Proposed patch (v1)
mitz
Comment 2 2010-09-27 22:31:20 PDT
Comment on attachment 68945 [details] Proposed patch (v1) View in context: https://bugs.webkit.org/attachment.cgi?id=68945&action=review > WebCore/editing/Editor.cpp:2719 > + RefPtr<ClientRect> clientRect = rangeToReplace->getBoundingClientRect(); I don’t think getBoundingClientRect() is appropriate here. It is high-level DOM API which calls updateLayoutIgnorePendingStylesheets() and creates a DOM object (ClientRect) which you don’t need for the client interface. I think you should call getBorderAndTextQuads() directly to get a vector of quads in view coordinates.
Jia Pu
Comment 3 2010-09-28 10:24:52 PDT
Created attachment 69067 [details] Proposed patch (v2) Revised per comment #2.
WebKit Commit Bot
Comment 4 2010-09-28 11:48:20 PDT
Comment on attachment 69067 [details] Proposed patch (v2) Clearing flags on attachment: 69067 Committed r68547: <http://trac.webkit.org/changeset/68547>
WebKit Commit Bot
Comment 5 2010-09-28 11:48:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.