WebCore/dom/Range.h
@@ -109,6 +109,7 @@ public:
     void textRects(Vector<IntRect>&, bool useSelectionHeight = false);
     // Transform-friendly
     void textQuads(Vector<FloatQuad>&, bool useSelectionHeight = false);
+    void getBorderAndTextQuads(Vector<FloatQuad>&) const;
 
     void nodeChildrenChanged(ContainerNode*);
     void nodeChildrenWillBeRemoved(ContainerNode*);
@@ -146,8 +147,6 @@ private:
 
     enum ActionType { DELETE_CONTENTS, EXTRACT_CONTENTS, CLONE_CONTENTS };
     PassRefPtr<DocumentFragment> processContents(ActionType, ExceptionCode&);
-
-    void getBorderAndTextQuads(Vector<FloatQuad>&) const;
 
     RefPtr<Document> m_ownerDocument;
     RangeBoundaryPoint m_start;
