WebCore/editing/Editor.cpp
@@ -2716,7 +2716,7 @@ void Editor::markAllMisspellingsAndBadGrammarInRanges(TextCheckingOptions textCh
                     if (shouldShowCorrectionPanel && resultLocation + resultLength == spellingRangeEndOffset && result->type == TextCheckingTypeCorrection) {
                         // We only show the correction panel on the last word.
                         Vector<FloatQuad> textQuads;
-                        rangeToReplace->textQuads(textQuads);
+                        rangeToReplace->getBorderAndTextQuads(textQuads);
                         Vector<FloatQuad>::const_iterator end = textQuads.end();
                         FloatRect totalBoundingBox;
                         for (Vector<FloatQuad>::const_iterator it = textQuads.begin(); it < end; ++it)
